deps/bleveldb-sys/src/lib.rs


    // =========================================================================
    // Iterator Operations
    // =========================================================================

    /// Destroy an iterator and release its resources
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to destroy
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_destroy(it: *mut leveldb_iterator_t);

    /// Check if iterator is positioned at a valid entry
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to check
    ///
    /// # Returns
    ///
    /// Non-zero if iterator is valid, zero otherwise
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_valid(it: *const leveldb_iterator_t) -> c_uchar;

    /// Position iterator at the first key in the database
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to position
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_seek_to_first(it: *mut leveldb_iterator_t);

    /// Position iterator at the last key in the database
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to position
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_seek_to_last(it: *mut leveldb_iterator_t);

    /// Position iterator at the specified key
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to position
    /// * `k` - Key to seek to
    /// * `klen` - Length of key in bytes
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    /// - `k` must point to at least `klen` bytes
    pub fn leveldb_iter_seek(it: *mut leveldb_iterator_t, k: *const c_char, klen: size_t);

    /// Advance iterator to the next key
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to advance
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_next(it: *mut leveldb_iterator_t);

    /// Move iterator to the previous key
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator to move
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_prev(it: *mut leveldb_iterator_t);

    /// Get the key at current iterator position
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator
    /// * `klen` - Pointer to store key length
    ///
    /// # Returns
    ///
    /// Pointer to key data
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator positioned at a valid entry
    /// - The returned pointer is only valid until the iterator is modified
    pub fn leveldb_iter_key(it: *const leveldb_iterator_t, klen: *mut size_t) -> *const c_char;

    /// Get the value at current iterator position
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator
    /// * `vlen` - Pointer to store value length
    ///
    /// # Returns
    ///
    /// Pointer to value data
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator positioned at a valid entry
    /// - The returned pointer is only valid until the iterator is modified
    pub fn leveldb_iter_value(it: *const leveldb_iterator_t, vlen: *mut size_t) -> *const c_char;

    /// Get any error associated with the iterator
    ///
    /// # Arguments
    ///
    /// * `it` - Iterator
    /// * `errptr` - Pointer to store error message
    ///
    /// # Safety
    ///
    /// - `it` must be a valid iterator pointer
    pub fn leveldb_iter_get_error(it: *const leveldb_iterator_t, errptr: *mut *mut c_char);

    // =========================================================================
    // Write Batch Operations
    // =========================================================================

    /// Create a new write batch
    ///
    /// # Returns
    ///
    /// Pointer to a new write batch handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_writebatch_destroy()` on the returned pointer
    pub fn leveldb_writebatch_create() -> *mut leveldb_writebatch_t;

    /// Destroy a write batch and release its resources
    ///
    /// # Arguments
    ///
    /// * `b` - Write batch to destroy
    ///
    /// # Safety
    ///
    /// - `b` must be a valid write batch pointer
    pub fn leveldb_writebatch_destroy(b: *mut leveldb_writebatch_t);

    /// Clear all operations from a write batch
    ///
    /// # Arguments
    ///
    /// * `b` - Write batch to clear
    ///
    /// # Safety
    ///
    /// - `b` must be a valid write batch pointer
    pub fn leveldb_writebatch_clear(b: *mut leveldb_writebatch_t);

    /// Add a put operation to the write batch
    ///
    /// # Arguments
    ///
    /// * `b` - Write batch
    /// * `key` - Key data pointer
    /// * `keylen` - Length of key data in bytes
    /// * `val` - Value data pointer
    /// * `vallen` - Length of value data in bytes
    ///
    /// # Safety
    ///
    /// - `b` must be a valid write batch pointer
    /// - `key` and `val` must point to at least `keylen` and `vallen` bytes respectively
    pub fn leveldb_writebatch_put(
        b: *mut leveldb_writebatch_t,
        key: *const c_char,
        keylen: size_t,
        val: *const c_char,
        vallen: size_t,
    );

    /// Add a delete operation to the write batch
    ///
    /// # Arguments
    ///
    /// * `b` - Write batch
    /// * `key` - Key data pointer
    /// * `keylen` - Length of key data in bytes
    ///
    /// # Safety
    ///
    /// - `b` must be a valid write batch pointer
    /// - `key` must point to at least `keylen` bytes
    pub fn leveldb_writebatch_delete(
        b: *mut leveldb_writebatch_t,
        key: *const c_char,
        keylen: size_t,
    );

    /// Iterate over all operations in a write batch
    ///
    /// # Arguments
    ///
    /// * `b` - Write batch to iterate over
    /// * `state` - User state pointer passed to callback functions
    /// * `put` - Callback function for put operations
    /// * `deleted` - Callback function for delete operations
    ///
    /// # Safety
    ///
    /// - `b` must be a valid write batch pointer
    /// - Callback functions must have correct signatures
    pub fn leveldb_writebatch_iterate(
        b: *mut leveldb_writebatch_t,
        state: *mut c_void,
        put: extern "C" fn(*mut c_void, *const c_char, size_t, *const c_char, size_t),
        deleted: extern "C" fn(*mut c_void, *const c_char, size_t),
    );

    // =========================================================================
    // Options Management
    // =========================================================================

    /// Create a new database options handle
    ///
    /// # Returns
    ///
    /// Pointer to a new options handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_options_destroy()` on the returned pointer
    pub fn leveldb_options_create() -> *mut leveldb_options_t;

    /// Destroy an options handle and release its resources
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle to destroy
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_destroy(o: *mut leveldb_options_t);

    /// Set a custom comparator for key ordering
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `c` - Comparator to use
    ///
    /// # Safety
    ///
    /// - Both pointers must be valid
    pub fn leveldb_options_set_comparator(o: *mut leveldb_options_t, c: *mut leveldb_comparator_t);

    /// Set a filter policy for bloom filters
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `policy` - Filter policy to use
    ///
    /// # Safety
    ///
    /// - Both pointers must be valid
    pub fn leveldb_options_set_filter_policy(
        o: *mut leveldb_options_t,
        policy: *mut leveldb_filterpolicy_t,
    );

    /// Configure whether to create the database if it doesn't exist
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `val` - Non-zero to create if missing, zero otherwise
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_create_if_missing(o: *mut leveldb_options_t, val: c_uchar);

    /// Configure whether to error if the database already exists
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `val` - Non-zero to error if exists, zero otherwise
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_error_if_exists(o: *mut leveldb_options_t, val: c_uchar);

    /// Enable or disable paranoid checks
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `val` - Non-zero to enable paranoid checks, zero to disable
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_paranoid_checks(o: *mut leveldb_options_t, val: c_uchar);

    /// Set a custom environment for OS operations
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `env` - Environment to use
    ///
    /// # Safety
    ///
    /// - Both pointers must be valid
    pub fn leveldb_options_set_env(o: *mut leveldb_options_t, env: *mut leveldb_env_t);

    /// Set a custom logger for informational messages
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `logger` - Logger to use
    ///
    /// # Safety
    ///
    /// - Both pointers must be valid
    pub fn leveldb_options_set_info_log(o: *mut leveldb_options_t, logger: *mut leveldb_logger_t);

    /// Set the size of the write buffer
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `size` - Write buffer size in bytes
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_write_buffer_size(o: *mut leveldb_options_t, size: size_t);

    /// Set the maximum number of open files
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `num` - Maximum number of open files
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_max_open_files(o: *mut leveldb_options_t, num: c_int);

    /// Set the block cache for uncompressed data
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `cache` - Cache to use
    ///
    /// # Safety
    ///
    /// - Both pointers must be valid
    pub fn leveldb_options_set_cache(o: *mut leveldb_options_t, cache: *mut leveldb_cache_t);

    /// Set the size of data blocks
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `size` - Block size in bytes
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_block_size(o: *mut leveldb_options_t, size: size_t);

    /// Set the block restart interval
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `interval` - Restart interval
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_block_restart_interval(o: *mut leveldb_options_t, interval: c_int);

    /// Set the maximum file size for SST files
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `size` - Maximum file size in bytes
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_max_file_size(o: *mut leveldb_options_t, size: size_t);
